# obs-virtual-cam

./: .gitignore  CMakeLists.txt
src/virtual-output/: CMakeLists.txt  hflip.cpp  hflip.h
src/virtual-source/: CMakeLists.txt  clock.cpp  virtual-audio.cpp  virtual-cam.cpp
